      in Dpkg::Changelog.
    - Replace changelog program parsers with perl modules.
    - Add a getter for the Time::Piece object in Dpkg::Changelog.
    - Add new Timestamp field to Dpkg::Changelog output, which ends up on
      dpkg-parsechangelog's output.
    - Validate source version in set_version_substvars()'s Dpkg::Substvars
      method.
  * Test suite:
    - Bump perlcritic ValuesAndExpressions::RequireNumberSeparators minimum
      to 99999.
  * Documentation:
    - Improve dpkg-buildpackage(1) on environment expectations.
    - Clarify the format of the db:Status-Abbrev virtual field in
      dpkg-query(1). Closes: #824515
    - Document the tar entry size limitation for deb(5) format.
    - Document interaction between PIE and libraries in dpkg-buildflags(1).
      Based on text by Christian Seiler <christian@iwakd.de>.
    - Merge ENVIRONMENT sections in dpkg-buildflags(1).
    - Document various long options in dpkg-source --help output.
    - Move dpkg-source -q option from “Build options” to “General options”
      section in --help output.

  [ Updated programs translations ]
  * German (Sven Joachim).
  * Simplified Chinese (Zhou Mo). Closes: #824873

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Mon, 09 May 2016 05:10:36 +0200

dpkg (1.18.7) unstable; urgency=medium

  [ Guillem Jover ]
  * Add new dpkg-source --require-strong-checksums option and change default.
    There is no point in erroring out on this condition when signature issues
    are only warnings, because we cannot guarantee we have functional keys
    for old signatures. Regression introduced in dpkg 1.18.5. Closes: #823428
  * Stop using several fixed sized buffers for program reporting, which in
    many cases could cause confusing truncation of long messages. Use heap
    allocated formatted strings instead: