@@ -18,7 +18,9 @@ package Dpkg::Conf;
 use strict;
 use warnings;
 
-our $VERSION = '1.02';
+our $VERSION = '1.03';
+
+use Carp;
 
 use Dpkg::Gettext;
 use Dpkg::ErrorHandling;
@@ -58,7 +60,7 @@ sub new {
     my $class = ref($this) || $this;
 
     my $self = {
-	options => {},
+	options => [],
 	allow_short => 0,
     };
     foreach my $opt (keys %opts) {
@@ -79,46 +81,19 @@ Returns the list of options that can be parsed like @ARGV.
 
 sub get_options {
     my $self = shift;
-    my @options;
 
-    foreach my $name (sort keys %{$self->{options}}) {
-        my $value = $self->{options}->{$name};
-
-        $name = "--$name" unless $name =~ /^-/;
-        if (defined $value) {
-            push @options, "$name=$value";
-        } else {
-            push @options, $name;
-        }
-    }
-
-    return @options;
+    return @{$self->{options}};
 }
 
-=item $value = $conf->get($name)
-
-Returns the value of option $name, where the option name should not have "--"
-prefixed. If the option is not present the function will return undef.
-
-=cut
+# These functions existed for a brief time, but do not mesh well with
+# repeated options.
 
 sub get {
-    my ($self, $name) = @_;
-
-    return $self->{options}->{$name};
+    croak 'obsolete function, use get_options instead';
 }
 
-=item $conf->set($name, $value)
-
-Set the $value of option $name, where the option name should not have "--"
-prefixed.
-
-=cut
-
 sub set {
-    my ($self, $name, $value) = @_;
-
-    $self->{options}->{$name} = $value;
+    croak 'obsolete function, use get_options instead';
 }
 
 =item $conf->load($file)
@@ -150,11 +125,13 @@ sub parse {
 	}
 	if (/^([^=]+)(?:=(.*))?$/) {
 	    my ($name, $value) = ($1, $2);
+	    $name = "--$name" unless $name =~ /^-/;
 	    if (defined $value) {
 		$value =~ s/^"(.*)"$/$1/ or $value =~ s/^'(.*)'$/$1/;
+		push @{$self->{options}}, "$name=$value";
+	    } else {
+		push @{$self->{options}}, $name;
 	    }
-	    $name =~ s/^--//;
-	    $self->{options}->{$name} = $value;
 	    $count++;
 	} else {
 	    warning(g_('invalid syntax for option in %s, line %d'), $desc, $.);
@@ -167,8 +144,6 @@ sub parse {
 
 Filter the list of options, either removing or keeping all those that
 return true when &$opts{remove}($option) or &opts{keep}($option) is called.
-If $opts{format_argv} is true the long options passed to the filter
-functions will have "--" prefixed.
 
 =cut
 
@@ -177,16 +152,10 @@ sub filter {
     my $remove = $opts{remove} // sub { 0 };
     my $keep = $opts{keep} // sub { 1 };
 
-    foreach my $name (keys %{$self->{options}}) {
-        my $option = $name;
+    croak 'obsolete option format_argv' if exists $opts{format_argv};
 
-        if ($opts{format_argv}) {
-            $option = "--$name" unless $name =~ /^-/;
-        }
-        if (&$remove($option) or not &$keep($option)) {
-            delete $self->{options}->{$name};
-        }
-    }
+    @{$self->{options}} = grep { not &$remove($_) and &$keep($_) }
+                               @{$self->{options}};
 }
 
 =item $string = $conf->output($fh)
@@ -207,12 +176,9 @@ Save the options in a file.
 sub output {
     my ($self, $fh) = @_;
     my $ret = '';
-
-    foreach my $name (sort keys %{$self->{options}}) {
-	my $value = $self->{options}->{$name};
-
-	my $opt = $name;
-	$opt .= " = \"$value\"" if defined $value;
+    foreach my $opt ($self->get_options()) {
+	$opt =~ s/^--//;
+	$opt =~ s/^([^=]+)=(.*)$/$1 = "$2"/;
 	$opt .= "\n";
 	print { $fh } $opt if defined $fh;
 	$ret .= $opt;
@@ -223,6 +189,12 @@ sub output {
 =back
 
 =head1 CHANGES
+
+=head2 Version 1.03 (dpkg 1.18.8)
+
+Obsolete option: 'format_argv' in $conf->filter().
+
+Obsolete methods: $conf->get(), $conf->set().
 
 =head2 Version 1.02 (dpkg 1.18.5)
 
