@@ -4,6 +4,7 @@ option-double-quotes = "value double quotes"
 option-single-quotes = 'value single quotes'
 option-space  = 	 value words space	  
 
+option-dupe=value1
 option-name=value-name		  
 	  
 	  # Indented comment.
@@ -11,10 +12,12 @@ option-name=value-name
 
 option-equal=value-equal=subvalue-equal
 option-noequal value-noequal
+option-dupe=value2
 option-simple
 
-# Fully spelled out option.
+# Fully spelled out options.
 --option-dash=value-dash
+--option-dupe=value3
 
 # Long option with one character name.
 l=v
